新增景点相关页面

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 					handleSelect: function(key, keyPath) {
 						if(key == 1) {
 							document.getElementById("contentFrame").src = "order-list.html";
+						} else if(key == 2) {
+							document.getElementById("contentFrame").src = "scenic-list.html";
 						}
 					},
 
