--- a/order-list.html
+++ b/order-list.html
@@ -29,6 +29,50 @@
 				padding: 15px;
 				margin-bottom: 15px;
 			}
+			
+			.main-cust-dialog {
+				border: 1px solid #ebebeb;
+				border-radius: 3px;
+				padding: 15px;
+				color: #333;
+				margin-bottom: 20px;
+			}
+			
+			.order-table .table-title {
+				background: #E9EEF3;
+				font-size: 14px;
+				font-family: "PingFang SC";
+				width: 100px;
+				text-align: center;
+			}
+			
+			.order-table .table-value {
+				font-size: 13px;
+				font-family: "PingFang SC";
+				padding-left: 10px;
+			}
+			
+			.order-table .table-title-top {
+				font-size: 16px;
+				font-family: "PingFang SC";
+				text-align: center;
+				background: #E9EEF3;
+			}
+			
+			.order-table {
+				width: 100%;
+				border-collapse: collapse;
+				margin-bottom: 20px;
+			}
+			
+			.order-table td {
+				height: 40px;
+				border: 1px solid #BBBBBB;
+			}
+			
+			.el-row {
+				margin-bottom: 20px;
+			}
 		</style>
 	</head>
 
@@ -65,7 +109,7 @@
 						<el-table-column prop="orderSts" label="订单状态" header-align="center" align="center"></el-table-column>
 						<el-table-column fixed="right" label="操作" header-align="center" align="center">
 							<template slot-scope="scope">
-								<el-button @click="handleClick(scope.row)" type="text" size="small">查看</el-button>
+								<el-button @click="dialogFormVisible = true" type="text" size="small">查看</el-button>
 							</template>
 						</el-table-column>
 					</el-table>
@@ -73,6 +117,46 @@
 					</el-pagination>
 				</template>
 			</div>
+
+			<el-dialog title="订单信息" :visible.sync="dialogFormVisible">
+				<div class="main-cust-dialog">
+					<table class="order-table">
+						<tbody>
+							<tr>
+								<td class="table-title">订单号</td>
+								<td class="table-value"><b>{{orderInfo.orderNo}}</b></td>
+								<td class="table-title">报名行程</td>
+								<td class="table-value">{{orderInfo.tripTitle}}</td>
+							</tr>
+							<tr>
+								<td class="table-title">联系人</td>
+								<td class="table-value">{{orderInfo.contactName}}</td>
+								<td class="table-title">联系人电话</td>
+								<td class="table-value">{{orderInfo.contactPhone}}</td>
+							</tr>
+							<tr>
+								<td class="table-title">报名时间</td>
+								<td class="table-value">{{orderInfo.enrollTime}}</td>
+								<td class="table-title">订单状态</td>
+								<td class="table-value" style="color: red;"><b>{{orderInfo.orderSts}}</b></td>
+							</tr>
+							<tr>
+								<td class="table-title">预定门票</td>
+								<td class="table-value" colspan="3">{{orderInfo.ticketInfo}}</td>
+							</tr>
+						</tbody>
+					</table>
+					<el-form :model="form">
+						<el-form-item label="备注">
+							<el-input type="textarea" v-model="form.desc"></el-input>
+						</el-form-item>
+					</el-form>
+				</div>
+				<div slot="footer" class="dialog-footer">
+					<el-button @click="dialogFormVisible = false" size="small">取 消</el-button>
+					<el-button type="primary" @click="dialogFormVisible = false" size="small">处理完成</el-button>
+				</div>
+			</el-dialog>
 		</div>
 
 		<script src="https://unpkg.com/vue/dist/vue.js"></script>
