新增行程相关页面

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 							document.getElementById("contentFrame").src = "order-list.html";
 						} else if(key == 2) {
 							document.getElementById("contentFrame").src = "scenic-list.html";
+						} else if(key == 3){
+							document.getElementById("contentFrame").src = "trip-list.html";
 						}
 					},
 
