--- a/scenic-list.html
+++ b/scenic-list.html
@@ -4,8 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>景点列表页</title>
-		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://unpkg.com/element-ui@2.4.7/lib/theme-chalk/index.css">
 		<style>
 			.header-cust {
 				color: #333;
@@ -32,6 +31,16 @@
 			
 			.table-btn {
 				margin-bottom: 15px;
+			}
+			
+			.main-cust-dialog {
+				border: 1px solid #ebebeb;
+				border-radius: 3px;
+				padding: 15px;
+			}
+			
+			.price-set {
+				width: 200px;
 			}
 		</style>
 	</head>
@@ -60,9 +69,9 @@
 			</div>
 			<div class="main-cust">
 				<div class="table-btn">
-					<el-button type="primary" size="small">新 增</el-button>
-					<el-button type="primary" size="small">生 效</el-button>
-					<el-button type="primary" size="small">失 效</el-button>
+					<el-button type="primary" size="small" @click="dialogFormVisible = true">新 增</el-button>
+					<el-button type="success" size="small">生 效</el-button>
+					<el-button type="danger" size="small">失 效</el-button>
 				</div>
 
 				<template>
@@ -83,10 +92,75 @@
 					</el-pagination>
 				</template>
 			</div>
+
+			<el-dialog title="创建景点" :visible.sync="dialogFormVisible">
+				<div class="main-cust-dialog">
+					<el-form ref="addForm" :model="addForm" class="addForm" label-width="80px" size="small">
+						<el-form-item label="景点名称">
+							<el-input v-model="addForm.scenicName"></el-input>
+						</el-form-item>
+						<el-form-item label="所在城市">
+							<el-select v-model="addForm.city">
+								<el-option label="北京" value="100000"></el-option>
+								<el-option label="保定" value="102120"></el-option>
+							</el-select>
+						</el-form-item>
+						<el-form-item label="详细地址">
+							<el-input v-model="addForm.scenicAddress"></el-input>
+						</el-form-item>
+						<el-form-item label="开放时间">
+							<el-time-select placeholder="起始时间" v-model="addForm.startTime" :picker-options="{start: '08:30', step: '00:15', end: '18:30'}">
+							</el-time-select>
+							<el-time-select placeholder="结束时间" v-model="addForm.endTime" :picker-options="{start: '08:30', step: '00:15', end: '18:30', minTime: addForm.startTime}">
+							</el-time-select>
+						</el-form-item>
+						<el-form-item label="票价设置">
+							<el-input size="mini" v-model="addForm.price1" class="price-set">
+								<template slot="prepend">成人</template>
+								<template slot="append">元</template>
+							</el-input>
+							<el-input size="mini" v-model="addForm.price2" class="price-set">
+								<template slot="prepend">学生</template>
+								<template slot="append">元</template>
+							</el-input>
+							<el-input size="mini" v-model="addForm.price3" class="price-set">
+								<template slot="prepend">儿童</template>
+								<template slot="append">元</template>
+							</el-input>
+							<el-input size="mini" v-model="addForm.price3" class="price-set">
+								<template slot="prepend">老年</template>
+								<template slot="append">元</template>
+							</el-input>
+							<el-input size="mini" v-model="addForm.price3" class="price-set">
+								<template slot="prepend">军人</template>
+								<template slot="append">元</template>
+							</el-input>
+						</el-form-item>
+						<el-form-item label="轮播图">
+							<el-upload action="https://jsonplaceholder.typicode.com/posts/" 
+								list-type="picture-card" 
+								:on-preview="handlePictureCardPreview" 
+								:on-remove="handleRemove">
+								<i class="el-icon-plus"></i>
+							</el-upload>
+							<el-dialog :visible.sync="dialogVisible">
+								<img width="100%" :src="dialogImageUrl" alt=""></img>
+							</el-dialog>
+						</el-form-item>
+						<el-form-item label="景点介绍">
+							<el-input type="textarea" v-model="addForm.scenicDesc"></el-input>
+						</el-form-item>
+					</el-form>
+				</div>
+				<div slot="footer" class="dialog-footer">
+					<el-button @click="dialogFormVisible = false" size="small">取消</el-button>
+					<el-button type="primary" @click="onSubmit" size="small">立即创建</el-button>
+				</div>
+			</el-dialog>
 		</div>
 
 		<script src="https://unpkg.com/vue/dist/vue.js"></script>
-		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+		<script src="https://unpkg.com/element-ui@2.4.7/lib/index.js"></script>
 		<script src="js/scenic/list.js"></script>
 	</body>
 
