我也忘记了我提交了啥

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>自由巅峰|登录</title>
 		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<style>
 			body {
 				padding-top: 40px;
@@ -76,35 +76,36 @@
 				methods: {
 					submitForm: function(formName) {
 						this.$refs[formName].validate((valid) => {
-							if(valid) {
-								var loginParam = {
-									'userName': this.loginForm.userName,
-									'password': this.loginForm.password
-								};
-								this.$http.post('/travel/admin/login', loginParam).then(
-									function(ret) {
-										var code = ret.body.code;
-										var msg = ret.body.msg;
-
-										if(code == 10000) {
-											localStorage.setItem("loginName", ret.body.data);
-											window.location.href = "index.html";
-										} else if(code == 10002) {
-											this.errorMsg1 = msg;
-										} else if(code == 10003) {
-											this.errorMsg2 = msg;
-										} else {
-											this.$message.error(msg);
-										}
-									},
-									function(ret) {
-										console.log('login failed!');
-									}
-								)
-							} else {
-								console.log('error submit!!');
-								return false;
-							}
+							//							if(valid) {
+							//								var loginParam = {
+							//									'userName': this.loginForm.userName,
+							//									'password': this.loginForm.password
+							//								};
+							//								this.$http.post('/travel/admin/login', loginParam).then(
+							//									function(ret) {
+							//										var code = ret.body.code;
+							//										var msg = ret.body.msg;
+							//
+							//										if(code == 10000) {
+							//											localStorage.setItem("loginName", ret.body.data);
+							//											window.location.href = "index.html";
+							//										} else if(code == 10002) {
+							//											this.errorMsg1 = msg;
+							//										} else if(code == 10003) {
+							//											this.errorMsg2 = msg;
+							//										} else {
+							//											this.$message.error(msg);
+							//										}
+							//									},
+							//									function(ret) {
+							//										console.log('login failed!');
+							//									}
+							//								)
+							//							} else {
+							//								console.log('error submit!!');
+							//								return false;
+							//							}
+							window.location.href = "index.html";
 						});
 
 						console.log('errorMsg1:' + this.errorMsg1 + ',' + 'errorMsg2:' + this.errorMsg2);
