--- a/order-list.html
+++ b/order-list.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>订单列表页</title>
 		<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<style>
 			.header-cust {
 				color: #333;
